iframe and collapse issues are fixed with css

--- a/src/main/webapp/resources/css/bootstrap-responsive.css
+++ b/src/main/webapp/resources/css/bootstrap-responsive.css
@@ -227,8 +227,8 @@
     *width: 91.39979996362975%;
   }
   .row-fluid .span10 {
-    width: 90%;
-    *width: 90%;
+    width: 95%;
+    *width: 95%;
   }
   .row-fluid .span9 {
     width: 74.35897435897436%;
@@ -259,8 +259,8 @@
     *width: 11%; margin:0 30px !important;
   }
   .row-fluid .span2 {
-    width: 10%;
-    *width: 10%;
+    width: 5%;
+    *width: 5%;
   }
   .row-fluid .span1 {
     width: 5.982905982905983%;
