--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,16 +1,30 @@
 /* Larger than Desktop HD */
-body{overflow-y:scroll; overflow-x:hidden;}
-body::-webkit-scrollbar{display:none;}body::-ms-scrollbar{display:none;}body::-moz-scrollbar{display:none;}
+
+.pagicus {
+    background: #0081c2 none repeat scroll 0 0;
+    border: 0 none;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px #ccc;
+    color: #fff;
+    height: 30px;
+    margin-bottom: 10px;
+    padding: 4px;
+    width: 30px;
+}
+
 @media (min-width: 1201px) and (max-width: 4000px) {
 	.marginauto {
     margin: 0 auto;
     width: 80%;
 }
-	.parentrightreport{}
-	.parentline1{ width:90%; margin:0 auto;}
+.pagermargin{margin: -26px 0 0 20px;}
+.btnmargin{ margin-right: 10px;}
+.row-fluid{width:3000px !important;}
+	.parentrightreport{ width: 90%;}
+	.parentline1{ width:42%; margin:18px;}
 	.childsline1{ float:left; width:16.5%;}
 	.inputline1{width:130px !important;}
-	.parentline2{ width:90%; margin:0 auto;}
+	.parentline2{ width:100%; margin:18px;}
 	.childtests{float: left;height: 28px;}
 	.childtests > label {font-size: 14px;margin-right: 40px;margin-top: 10px;}
 	#datetimepicker > input {font-size: 11px;}
