--- a/src/main/webapp/resources/css/style-responsive.css
+++ b/src/main/webapp/resources/css/style-responsive.css
@@ -8,8 +8,8 @@
 	         	box-shadow: -3px -1px 2px rgba(0,0,0,0.95);
 		background: url(../img/bg.jpg) repeat;
 		filter: none;
-		padding: 25px 0px 25px 40px;
-		margin: -25px -4px;
+		padding: 25px 0px 0 40px;
+		margin: -25px -4px 0;
 		position: relative;
 		z-index: 1;
 		min-height: 100%;
